login modal with and authentication setup

--- a/.env
+++ b/.env
@@ -6,3 +6,9 @@
 
 DATABASE_URL="mongodb+srv://admin:admin@clusterairbnb.jtdgcve.mongodb.net/test"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+
+GITHUB_ID = 8f9172ab1c60a0581f4c
+GITHUB_SECRET = e9e86d27803c50b22dda944f7a7caf134178f35e
+
+GOOGLE_CLIENT_ID = 120632590864-8r4h136ab6shl29tfdmmjnccvcn42r0g.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
