listing completed - rentModal

--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ GITHUB_SECRET = e9e86d27803c50b22dda944f7a7caf134178f35e
 
 GOOGLE_CLIENT_ID = 120632590864-8r4h136ab6shl29tfdmmjnccvcn42r0g.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = 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
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dheqf97tl"
