--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "autoprefixer": "latest",
     "eslint": "latest",
     "eslint-config-next": "latest",
+    "gh-pages": "^6.1.0",
     "postcss": "latest",
     "prisma": "^5.4.2",
     "tailwindcss": "latest",
